codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__large_transcript_renders_loading_until_layout_is_ready.snap
---
source: tui/src/pager_overlay.rs
expression: "buffer_to_text(&buf, area)"
---
 Transcript ────────────────────────────────────────────────────────────────────
Loading transcript...




─────────────────────────────────────────────────────────── 0 / 0 · loading... ─
 ↑/↓ scroll   ←/→ prompts   pgup/pgdn page   home/end jump
 q quit   ctrl + o copy   ⌥ + r raw   esc/← prev   / search
