codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_footer_status.snap
---
source: tui/src/pager_overlay.rs
expression: "render_snapshot(&mut overlay, Rect::new(0, 0, 80, 8),)"
---
 Transcript ────────────────────────────────────────────────────────────────────

› prompt

───────────────────────────────────────────────────────────────── 1 / 1 · 100% ─
 ↑/↓ scroll   ←/→ prompts   pgup/pgdn page   … Copied selected turn to clipboard
 q quit   ctrl + o copy   ⌥ + r raw   esc/← prev   / search
