codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_search_snapshot.snap
---
source: tui/src/pager_overlay.rs
expression: term.backend()
---
" Transcript · 1 prompt · 100% ────────────────────"
"Search: needle                                 1/1"
"› find this prompt                                "
"                                                  "
"                                                  "
"• assistant needle result                         "
"──────────────────────────────────────────────────"
" ↑/↓   ←/→   pgup/pgdn   home/end                 "
" ctrl + t   esc   enter   shift + n   /           "
"                                                  "
